# CommonSecretaryServices

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_multilingual_directories.md  __.env  api_test.py  check_jobs.py  config.yaml  conftest.py  create_test_batch.py  docker-build-run.bat  docker-compose.yml  et --hard f92e9a5  event_test_README.md  mkdocs.yml  mypy.ini  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  runpython.bat  setup.py  temp_log.txt  test_api.py  test_batch_events_async.py  test_check_all_jobs.py  test_check_results.py  test_event_processor_async.py  test_output.json  test_segment.py  test_serve_results.py  test_story_processor.py  test_worker_manager.py  transformer_story_test.py
.obsidian/: community-plugins.json  workspace.json
.tests/: test_audio_job_handler.py  test_llm_embedding_config.py  test_metrics_stats.py  test_office_processor_docx_basic.py  test_office_processor_pptx_basic.py  test_office_processor_xlsx_basic.py  test_rag_embed_text_endpoint.py  test_rag_processor_embed_document_for_client.py  test_text_chunking.py  test_xxl_chunk_sizing.py  test_xxl_text_summarization.py
config/: config.yaml
docs/: 01_architecture.md  02_installation.md  03_development.md  04_api.md  05_types.md  06_audio_processing.md  07_async_event_processing_implementation.md  08_templates.md  09_security.md  10_development_guidelines.md  11_deployment.md  12_troubleshooting.md  13_api_reference.md  13_changelog.md  15_support.md  CommonSecretaryServicesAPI.md  (+32 more)
(+610 files in other folders)
