[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anonymous-processing-services"
version = "0.1.0"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["api", "core", "processors", "utils"] 

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
] 